# koneko

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.md  koneko.cabal  package.json  setup.py  thesis
.github/workflows/: ci.yml
doc/: 01-language-features.md  02-identifiers-and-quoting.md  03-primitive-data-types.md  04-pairs-lists-and-dicts.md  05-functions.md  06-multimethods.md  07-records.md  08-syntactic-sugar.md  09-primitives-builtins-and-prelude.md  10-standard-library.md  11-future.md  more-examples.md
examples/: fizzbuzz-sleep-clean.knk  fizzbuzz-sleep-factored.knk  fizzbuzz-sleep.knk  fizzbuzz.knk  grep.knk  head.knk  hello-ask.knk  hello-js.knk  hello.knk  hello2.knk  infseq.knk  mutrec.knk  sh.knk  sort.knk  uniq.knk  wc-l.knk
js/: cli.js  cli.sh  index.html  koneko.js  nya
koneko/: __init__.py  __main__.py  data.py  eval.py  misc.py  read.py  repl.py
lib/: _test.knk  prelude.knk  str.knk
misc/: NOTES.md
misc/pygments/lexers/: koneko.py
misc/time/: x  x.hs  x.knk  x.py  x0.knk  x1.knk  x1.py  x2.knk  x3.knk  x4.knk
misc/vim/ftdetect/: koneko.vim
misc/vim/ftplugin/: koneko.vim
misc/vim/syntax/: koneko.vim
nya/: katze.cat  tabby.cat
pygments/lexers/: koneko.py
scripts/: copy-or-link-vim-syntax  knk2html  knk2index  knk2sh  knkpyg  repl_hs  repl_js  test-diff
src/: Main.hs  doctests.hs
src-unix/: Koneko_utils.hs
src-win/: Koneko_utils.hs
src/Koneko/: Bltn.hs  Data.hs  Eval.hs  IO.hs  JSON.hs  Math.hs  Misc.hs  Prim.hs  Prld.hs  Read.hs  Repl.hs  Test.hs
test/: doctests.hs
thesis/: .gitignore  Makefile  references.bib  thesis.tex
vim/ftplugin/: koneko.vim
vim/syntax/: koneko.vim
