cabal-version:       2.4

name:                koneko

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1

-- A short (one-line) description of the package.
synopsis:            a concatenative not-quite-lisp for kittens

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/obfusk/koneko

-- The license under which the package is released.
license:             GPL-3.0-or-later

-- The file containing the license text.
license-file:        LICENSE.GPLv3

-- The package author(s).
author:              Felix C. Stegerman

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          flx@obfusk.net

-- A copyright notice.
-- copyright:

category:            Compilers/Interpreters

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md, README.md, LICENSE.LGPLv3.STDLIB

data-files:          lib/**/*.knk nya/*.cat


common deps
  -- Other library packages from which modules are imported.
  build-depends:
    -- included w/ ghc:
    base >=4.9, directory, filepath, text, unix,
    -- included w/ haskell-platform:
    deepseq, random, unordered-containers,
    -- separate packages:
    cmdargs, hashtables, megaparsec, silently

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
                       -Werror -fno-warn-unused-imports


library
  import:              deps

  -- Modules exported by the library.
  exposed-modules:
    Koneko.Bltn
    Koneko.Data
    Koneko.Eval
    Koneko.Misc
    Koneko.Prim
    Koneko.Prld
    Koneko.Read
    Koneko.Repl
    Koneko.Test
    Paths_koneko

  -- Modules included in this library but not exported.
  -- other-modules:

  autogen-modules:
    Paths_koneko

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:


executable koneko
  import:              deps

  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Koneko.Bltn
    Koneko.Data
    Koneko.Eval
    Koneko.Misc
    Koneko.Prim
    Koneko.Prld
    Koneko.Read
    Koneko.Repl
    Koneko.Test
    Paths_koneko

  autogen-modules:
    Paths_koneko

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:


test-suite doctests
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       doctest
  hs-source-dirs:      test
  ghc-options:         -threaded

